# Synced-v2

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
backend/: main.py  sidecar_entry.py  signaling.py
backend/tests/: conftest.py  test_api.py  test_rate_limiting.py  test_signaling.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.js
frontend/.storybook/: preview.ts
frontend/e2e/: peer-flow.spec.ts
frontend/src/: App.jsx  App.tsx  config.ts  main.tsx  types.ts
frontend/src/components/: AudioVisualizer.jsx  AudioVisualizer.stories.tsx  AudioVisualizer.tsx  Chat.jsx  Chat.stories.tsx  Chat.test.tsx  Chat.tsx  DiagnosticsPanel.stories.tsx  DiagnosticsPanel.tsx  ErrorBoundary.tsx  FileShare.jsx  FileShare.stories.tsx  FileShare.test.tsx  FileShare.tsx  GhostAsciiArt.stories.tsx  GhostAsciiArt.tsx  Home.jsx  Home.stories.tsx  Home.test.tsx  Home.tsx  Lobby.jsx  Lobby.stories.tsx  Lobby.test.tsx  Lobby.tsx  ThemeSelector.tsx  UpdateBanner.tsx  VideoCall.jsx  VideoCall.stories.tsx  VideoCall.test.tsx  VideoCall.tsx  VideoGrid.stories.tsx  VideoGrid.test.tsx  VideoGrid.tsx  VoiceMessage.tsx
frontend/src/hooks/: useAppState.ts  useAudioDevices.test.ts  useAudioDevices.ts  useConnectionMonitor.js  useConnectionMonitor.test.ts  useConnectionMonitor.ts  useDataChannel.js  useDataChannel.ts  useFileTransfer.js  useFileTransfer.ts  useMicLevel.ts  useMultiChat.test.ts  useMultiChat.ts  useMultiFileTransfer.ts  (+14 more)
scripts/: build-all.ps1  build-sidecar.ps1  build-sidecar.sh  publish-update.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+14 files in other folders)
