[project]
name = "synced"
version = "1.0.0"
description = "Zero-trust peer-to-peer voice, video, and text chat"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
    "pytest-asyncio",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[project.scripts]
synced = "app:main"
